# remoc

./: .gitignore  CHANGELOG.md  CONTRIBUTORS  COPYING  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  check_version.sh  codecov.yml  publish.sh  rustfmt.toml
.cargo/: config.toml
chmux/: Cargo.toml
chmux/src/: cfg.rs  channel.rs  client.rs  codec.rs  credit.rs  lib.rs  listener.rs  msg.rs  multiplexer.rs  number_allocator.rs  port_allocator.rs  raw_channel.rs  raw_receiver.rs  raw_sender.rs  receive_buffer.rs  receiver.rs  send_lock.rs  sender.rs  server.rs  timeout.rs
chmux/src/codec/: bincode.rs  id.rs  json.rs  mod.rs
chmux/src/codecs/: bincode.rs  json.rs  mod.rs
chmux/src/serde_map/: hashmap.rs
chmux/tests/: channel.rs  channel_test.rs  multiplexer_tests.rs  tcp.rs  tcp_test.rs  unix.rs  unix_test.rs
chrpc/: Cargo.toml
chrpc/src/: lib.rs  local.rs  socket.rs
chrpc/tests/: service_test.rs
chrpc_macro/: Cargo.toml
chrpc_macro/src/: lib.rs
chser/: Cargo.toml
chser/src/: base_receiver.rs  base_sender.rs  codec.rs  interlock.rs  lib.rs  remote_receiver.rs  remote_sender.rs
chser/src/base/: mod.rs  receiver.rs  sender.rs
chser/src/codec/: json.rs  mod.rs
chser/src/lr/: mod.rs  receiver.rs  sender.rs
chser/src/mpsc/: mod.rs  receiver.rs  sender.rs
chser/src/raw/: mod.rs  receiver.rs  sender.rs
chser/src/remote/: mod.rs  receiver.rs  sender.rs
remoc/: Cargo.toml  README.md
remoc/src/: connect.rs  connect_ext.rs  doctest.rs  lib.rs  prelude.rs  provider.rs  remote_send.rs  robs.rs
remoc/src/chmux/: any_storage.rs  cfg.rs  client.rs  credit.rs  forward.rs  listener.rs  mod.rs  msg.rs  mux.rs  port_allocator.rs  receiver.rs  sender.rs
remoc/src/codec/: bincode.rs  cbor.rs  ciborium.rs  json.rs  message_pack.rs  messagepack.rs  mod.rs  postbag.rs  postcard.rs
remoc/src/codec/map/: btreemap.rs  hashmap.rs
remoc/src/codec/serde_map/: btreemap.rs  hashmap.rs  mod.rs
remoc/src/exec/: mod.rs
remoc/src/exec/js/: mod.rs  runtime.rs  task.rs  thread_pool.rs  time.rs
remoc/src/exec/native/: mod.rs
remoc/src/executor/: mod.rs  task.rs  thread_pool.rs
remoc/src/executor/js/: mod.rs  sync_wrapper.rs  task.rs  thread_pool.rs  time.rs
remoc/src/executor/native/: mod.rs
remoc/src/rch/: buffer.rs  interlock.rs  mod.rs
remoc/src/rch/base/: io.rs  mod.rs  receiver.rs  sender.rs
remoc/src/rch/broadcast/: mod.rs  receiver.rs  sender.rs
remoc/src/rch/io/: mod.rs  receiver.rs  sender.rs
remoc/src/rch/lr/: mod.rs  receiver.rs  sender.rs
remoc/src/rch/mpsc/: distributor.rs  mod.rs  receiver.rs  sender.rs
remoc/src/rch/oneshot/: mod.rs  receiver.rs  sender.rs
remoc/src/rch/remote/: io.rs  mod.rs  receiver.rs  sender.rs
remoc/src/rch/watch/: mod.rs  receiver.rs  sender.rs
remoc/src/rfn/: mod.rs  msg.rs  rfn_const.rs  rfn_mut.rs  rfn_once.rs
remoc/src/robj/: handle.rs  lazy.rs  mod.rs
remoc/src/robj/handle/: mod.rs
remoc/src/robj/lazy/: mod.rs
remoc/src/robj/lazy_blob/: fw_bin.rs  mod.rs
remoc/src/robj/rw_lock/: mod.rs  msg.rs  owner.rs  rw_lock.rs
remoc/src/robs/: hash_map.rs  hash_set.rs  list.rs  mod.rs  vec.rs  vec_deque.rs
remoc/src/rsync/: mod.rs
remoc/src/rsync/broadcast/: receiver.rs  sender.rs
remoc/src/rsync/handle/: mod.rs
remoc/src/rsync/lazy/: mod.rs
remoc/src/rsync/lazy_blob/: fw_bin.rs  mod.rs
remoc/src/rsync/lr/: receiver.rs  sender.rs
remoc/src/rsync/mpsc/: receiver.rs  sender.rs
remoc/src/rsync/remote/: mod.rs  receiver.rs  sender.rs
remoc/src/rsync/rw_lock/: owner.rs  rw_lock.rs  rwlock.rs
remoc/src/rsync/watch/: mod.rs  receiver.rs  sender.rs
remoc/src/rtc/: mod.rs
remoc/src/transport/: mod.rs
remoc/tests/: tests.rs
remoc/tests/chmux/: channel.rs  mod.rs  tcp.rs  unix.rs
remoc/tests/codec/: json.rs  mod.rs
remoc/tests/rch/: bin.rs  broadcast.rs  io.rs  lr.rs  mod.rs  mpsc.rs  oneshot.rs  remote.rs  watch.rs
remoc/tests/rfn/: mod.rs  rfn_const.rs  rfn_mut.rs  rfn_once.rs
remoc/tests/robj/: handle.rs  lazy.rs  lazy_blob.rs  mod.rs  rw_lock.rs
remoc/tests/robs/: hash_map.rs  hash_set.rs  list.rs  mod.rs  vec.rs  vec_deque.rs
remoc/tests/rsync/: bin.rs  broadcast.rs  handle.rs  lazy.rs  lazy_blob.rs  lr.rs  mod.rs  mpsc.rs  oneshot.rs  remote.rs  rw_lock.rs  watch.rs
remoc/tests/rtc/: async_trait.rs  default.rs  errors.rs  generics.rs  generics_non_clone.rs  lifetime.rs  mod.rs  readonly.rs  simple.rs  simple_clone.rs  simple_req.rs  simple_req_stream.rs  simple_rpit.rs  value.rs  variants.rs
remoc_macro/: Cargo.toml  README.md
remoc_macro/src/: lib.rs  method.rs  trait_def.rs  util.rs
remop/: Cargo.toml
remop/src/: lib.rs
remop/src/chmux/: cfg.rs  client.rs  credit.rs  listener.rs  mod.rs  msg.rs  multiplexer.rs  receiver.rs  sender.rs
remop/src/codec/: json.rs  mod.rs
remop/src/rfn/: mod.rs  msg.rs
remop/src/robj/: mod.rs
remop/src/rsync/: interlock.rs  mod.rs
remop/src/rsync/broadcast/: receiver.rs
remop/src/rsync/lazy_blob/: mod.rs
remop/src/rsync/mpsc/: distributor.rs  receiver.rs  sender.rs
remop/src/rsync/raw/: mod.rs  receiver.rs
remop/src/rsync/remote/: receiver.rs  sender.rs
remop/src/rsync/watch/: receiver.rs  sender.rs
remop/src/sync/: mod.rs
remop/src/sync/broadcast/: mod.rs  receiver.rs  sender.rs
remop/src/sync/lazy/: mod.rs
remop/src/sync/lr/: mod.rs  receiver.rs  sender.rs
remop/src/sync/mpsc/: distributor.rs  mod.rs  receiver.rs  sender.rs
remop/src/sync/oneshot/: mod.rs  receiver.rs  sender.rs
remop/src/sync/raw/: sender.rs
remop/src/sync/remote/: mod.rs  receiver.rs  sender.rs
remop/src/sync/rw_lock/: mod.rs  msg.rs  owner.rs  rwlock.rs
remop/src/sync/serde_map/: btreemap.rs
remop/src/sync/watch/: receiver.rs
remop/tests/: channel.rs  tcp.rs  tests.rs  unix.rs
remop/tests/chmux/: channel.rs  tcp.rs  unix.rs
remop_macro/: Cargo.toml
remop_macro/src/: lib.rs  method.rs  trait_def.rs  util.rs
rpc_test/: Cargo.toml  out.rs
src/: hash_map.rs  hash_set.rs  hashmap.rs  hashset.rs  lib.rs  list.rs  mpsc_replay.rs  vec.rs
tests/: hash_map.rs  hash_set.rs  hashmap.rs  hashset.rs  list.rs  (+2 more)
(+13 files in other folders)
