[workspace.package]
version = "0.18.3"

edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"

repository = "https://github.com/ENQT-GmbH/remoc/"
authors = [
    "Sebastian Urban <surban@surban.net>",
    "ENQT GmbH <su@enqt.de>",
    "Remoc contributors",
]

[workspace]
resolver = "2"
members = ["remoc", "remoc_macro"]
exclude = ["examples"]


# for WASI on the web (wasm32-wasip1-threads target with `js` feature):
# [patch.crates-io]
# js-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# web-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen-futures = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen-test = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
