[package]
name = "chmux"
version = "0.2.4"
authors = ["ENQT GmbH <su@enqt.de>"]
edition = "2018"
description = "Multiplexes multiple channels over a single transport (anything that implements Sink and Stream)."
keywords = ["multiplex", "transport", "mux", "multiple", "channels", "channel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json_codec", "bincode_codec"]
json_codec = ["serde_json", "bytes"]
bincode_codec = ["bincode", "bytes"]

[dependencies]
futures = "0.3"
pin-project = "1.0"
rand = "0.7"
log = "0.4"
async-trait = "0.1"
serde = {version="1.0", features=["derive"]}
serde_json = {version="1.0", optional=true}
bincode = {version="1.3", optional=true}
bytes = {version="0.5", optional=true}

[dev-dependencies]
futures = { version="0.3", features = ["thread-pool"] }
tokio = { version="0.2", features = ["tcp", "uds", "io-util", "rt-core"] }
tokio-util = { version="0.3", features = ["codec"] }
env_logger = "0.8"
