[package]
name = "chmux"
version = "0.8.0"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Multiplexes multiple channels over a single transport (anything that implements Sink and Stream)."
keywords = ["multiplex", "transport", "mux", "multiple", "channels", "channel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json_codec", "bincode_codec"]
json_codec = ["serde_json", "bytes"]
bincode_codec = ["bincode", "bytes"]

[dependencies]
futures = "0.3"
pin-project = "1.0"
rand = "0.8"
log = "0.4"
async-trait = "0.1"
serde = {version="1", features=["derive"]}
serde_json = {version="1", optional=true}
bincode = {version="1", optional=true}
bytes = {version="1", optional=true}

[dev-dependencies]
futures = { version="0.3", features = ["thread-pool"] }
tokio = { version="1", features = ["net", "io-util", "rt", "rt-multi-thread"] }
tokio-util = { version="0.6", features = ["codec"] }
env_logger = "0.8"
