[package]
name = "chmux"
version = "0.8.0"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Multiplexes multiple channels over a single transport (anything that implements Sink and Stream)."
keywords = ["multiplex", "transport", "mux", "multiple", "channels", "channel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-project = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
rand = "0.8"
log = "0.4"
async-trait = "0.1"
bytes = "1"
byteorder = "1"
lazy_static = "1"

[dev-dependencies]
tokio = { version="1", features = ["net", "io-util", "rt", "rt-multi-thread"] }
tokio-util = { version="0.6", features = ["codec"] }
env_logger = "0.9"
