[package]
name = "chrpc"
version = "0.3.3"
authors = ["ENQT GmbH <su@enqt.de>"]
edition = "2018"
description = "Streaming remote procedure calls (RPC) over chmux."
keywords = ["rpc", "chmux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["socket", "socket_tls", "local"]
socket = ["tokio-util", "bytes", "chmux/json_codec", "chmux/bincode_codec"]
socket_tls = ["socket", "tokio-rustls"]
local = ["chmux/json_codec"]

[dependencies]
chmux = { path="../chmux" }
chrpc_macro = { path="../chrpc_macro" }
async-trait = "0.1"
serde = {version="1.0", features=["derive"]}
futures = "0.3"
tokio = { version="0.2", features = ["rt-core", "macros", "sync"] }
tokio-util = { version="0.3", features = ["codec"], optional = true }
tokio-rustls = { version="0.14", optional = true}
pin-project = "1.0"
bytes = {version="0.5", optional = true}
log = "0.4"

[dev-dependencies]
tokio = { version="0.2", features = ["tcp", "uds", "io-util", "rt-core", "macros", "sync"] }
tokio-util = { version="0.3", features = ["codec"] }
env_logger = "0.8"
