[package]
name = "chrpc"
version = "0.8.0"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Streaming remote procedure calls (RPC) over chmux."
keywords = ["rpc", "chmux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["socket", "socket_tls", "local"]
socket = ["tokio-util", "bytes", "chmux/json_codec", "chmux/bincode_codec"]
socket_tls = ["socket", "tokio-rustls"]
local = ["chmux/json_codec"]

[dependencies]
chmux = { version = "0.8.0", path="../chmux" }
chrpc_macro = { version = "0.8.0", path="../chrpc_macro" }
async-trait = "0.1"
serde = {version="1.0", features = ["derive"]}
futures = "0.3"
tokio = { version="1", features = ["rt", "macros", "sync", "net", "io-util"] }
tokio-util = { version="0.6", features = ["codec"], optional = true }
tokio-rustls = { version="0.22", optional = true}
pin-project = "1.0"
bytes = { version="1", optional = true }
log = "0.4"
socket2 = "0.4"

[dev-dependencies]
tokio-util = { version="0.6", features = ["codec"] }
env_logger = "0.8"
