[package]
name = "chrpc_macro"
version = "0.2.2"
authors = ["ENQT GmbH <su@enqt.de>"]
edition = "2018"
description = "Procedural macro for chrpc. Do not use directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
quote = "1"

[lib]
proc-macro = true
