[package]
name = "chrpc_macro"
version = "0.8.0"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Procedural macro for chrpc. Do not use directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
quote = "1"

[lib]
proc-macro = true
