[package]
name = "chser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chmux = { path = "../chmux" }
serde = {version="1", features=["derive"]}
serde_json = {version="1"}
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
