[package]
name = "remoc"
version = "0.9.9"
authors = ["Sebastian Urban <surban@surban.net>", "ENQT GmbH <su@enqt.de>"]
readme = "README.md"
repository = "https://github.com/ENQT-GmbH/remoc/"
documentation = "https://docs.rs/remoc"
edition = "2018"
rust-version = "1.51"
description = "🦑 Remote multiplexed objects, channels and RPC making remote interactions seamless."
keywords = ["remote", "channel", "rpc", "stream", "multiplexer"]
categories = ["asynchronous", "network-programming"]
license = "Apache-2.0"


[features]
default = ["full", "default-codec-json"]
full = ["serde", "rch", "rfn", "robj", "rtc"]
rch = ["serde", "tokio-util", "tokio/io-util"]
rfn = ["rch"]
robj = ["rch"]
rtc = ["rch", "remoc_macro", "async-trait"]

# Codecs
default-codec-set = []
codec-bincode = ["bincode"]
default-codec-bincode = ["codec-bincode", "default-codec-set"]
codec-cbor = ["serde_cbor"]
default-codec-cbor = ["codec-cbor", "default-codec-set"]
codec-ciborium = ["ciborium"]
default-codec-ciborium = ["codec-ciborium", "default-codec-set"]
codec-json = ["serde_json"]
default-codec-json = ["codec-json", "default-codec-set"]
codec-message-pack = ["rmp-serde"]
default-codec-message-pack = ["codec-message-pack", "default-codec-set"]
full-codecs = ["codec-bincode", "codec-cbor", "codec-ciborium", "codec-json", "codec-message-pack"]

[dependencies]
remoc_macro = { version = "=0.9.9", path = "../remoc_macro", optional = true }

futures = "0.3"
tokio = { version = "1.13", features = ["macros", "rt", "sync", "time"] }
tokio-util = { version = "0.6.3", features = ["codec"], optional = true }
rand = "0.8"
tracing = "0.1.29"
bytes = "1"
byteorder = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Codecs
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
serde_cbor = { version = "0.11", optional = true }
ciborium = { version = "0.2", optional = true }
rmp-serde = { version = "0.15", optional = true }


[dev-dependencies]
tokio = { version = "1.13", features = [
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
] }
tokio-util = { version = "0.6.3", features = ["codec"] }
tokio-test = "0.4"
tracing-subscriber = "0.2"


[package.metadata.docs.rs]
features = ["full", "full-codecs", "default-codec-json"]
rustdoc-args = ["--cfg", "docsrs"]
