[package]
name = "remoc_macro"
version = "0.11.0-pre1"
authors = ["Sebastian Urban <surban@surban.net>", "ENQT GmbH <su@enqt.de>", "Remoc contributors"]
readme = "README.md"
repository = "https://github.com/ENQT-GmbH/remoc/"
edition = "2021"
rust-version = "1.59"
description = "Procedural macros for Remoc"
license = "Apache-2.0"


[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
quote = "1"


[lib]
proc-macro = true
