[package]
name = "remoc_macro"
description = "Procedural macros for Remoc"

version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }


[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits", "full", "visit"] }
quote = "1"


[lib]
proc-macro = true
