[package]
name = "remop"
version = "0.8.0-pre1"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Remote multiplexed operations, objects and ports"
keywords = ["remote", "channel", "rpc", "stream", "multiplexer"]
license = "Apache-2.0"

[features]
default = ["serde", "obj"]
obj = ["remop_macro"]

[dependencies]
remop_macro = { version = "=0.8.0-pre1", path = "../remop_macro", optional = true }
futures = "0.3"
pin-project = "1.0"
tokio = { version = "1.11", features = ["macros", "rt", "sync", "time"] }
rand = "0.8"
log = "0.4"
async-trait = "0.1"
bytes = "1"
byteorder = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = {version="1"}

[dev-dependencies]
tokio = { version="1", features = ["net", "io-util", "rt", "rt-multi-thread"] }
tokio-util = { version="0.6", features = ["codec"] }
env_logger = "0.9"
