[package]
name = "remop_macro"
version = "0.8.0-pre1"
authors = ["ENQT GmbH <su@enqt.de>", "Sebastian Urban <surban@surban.net>"]
edition = "2018"
description = "Procedural macros for remop"

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
quote = "1"

[lib]
proc-macro = true
